--- a/HtmlFiles/insert.html
+++ b/HtmlFiles/insert.html
@@ -45,184 +45,14 @@
                 </ul>
             </div>
             <div id="main-content">
-               <table width="100%">
-                <thead id="head">
-                    <th>S.no</th>
-                    <th>Student Name</th>
-                    <th>Address</th>
-                    <th>Course</th>
-                    <th>Grade</th>
-                </thead>
-                <tbody>
-                    <td><input id="num" type="number" placeholder="Enter S.no"></td>
-                    <td><input type="text" placeholder="Enter name"></td>
-                    <td><input type="text" placeholder="Address"></td>
-                    <td><input type="text" placeholder="Course"></td>
-                    <td><input type="text" placeholder="Grade"></td>
-                </tbody>
-                <tbody>
-                    <td><input id="num" type="number"></td>
-                    <td><input type="text"></td>
-                    <td><input type="text"></td>
-                    <td><input type="text"></td>
-                    <td><input type="text"></td>
-                </tbody>
-                <tbody>
-                    <td><input id="num" type="number"></td>
-                    <td><input type="text"></td>
-                    <td><input type="text"></td>
-                    <td><input type="text"></td>
-                    <td><input type="text"></td>
-                </tbody>
-                <tbody>
-                    <td><input id="num" type="number"></td>
-                    <td><input type="text"></td>
-                    <td><input type="text"></td>
-                    <td><input type="text"></td>
-                    <td><input type="text"></td>
-                </tbody>
-                <tbody>
-                    <td><input id="num" type="number"></td>
-                    <td><input type="text"></td>
-                    <td><input type="text"></td>
-                    <td><input type="text"></td>
-                    <td><input type="text"></td>
-                </tbody>
-                <tbody>
-                    <td><input id="num" type="number"></td>
-                    <td><input type="text"></td>
-                    <td><input type="text"></td>
-                    <td><input type="text"></td>
-                    <td><input type="text"></td>
-                </tbody>
-                <tbody>
-                    <td><input id="num" type="number"></td>
-                    <td><input type="text"></td>
-                    <td><input type="text"></td>
-                    <td><input type="text"></td>
-                    <td><input type="text"></td>
-                </tbody>
-                <tbody>
-                    <td><input id="num" type="number"></td>
-                    <td><input type="text"></td>
-                    <td><input type="text"></td>
-                    <td><input type="text"></td>
-                    <td><input type="text"></td>
-                </tbody>
-                <tbody>
-                    <td><input id="num" type="number"></td>
-                    <td><input type="text"></td>
-                    <td><input type="text"></td>
-                    <td><input type="text"></td>
-                    <td><input type="text"></td>
-                </tbody>
-                <tbody>
-                    <td><input id="num" type="number"></td>
-                    <td><input type="text"></td>
-                    <td><input type="text"></td>
-                    <td><input type="text"></td>
-                    <td><input type="text"></td>
-                </tbody>
-                <tbody>
-                    <td><input id="num" type="number"></td>
-                    <td><input type="text"></td>
-                    <td><input type="text"></td>
-                    <td><input type="text"></td>
-                    <td><input type="text"></td>
-                </tbody>
-                <tbody>
-                    <td><input id="num" type="number"></td>
-                    <td><input type="text"></td>
-                    <td><input type="text"></td>
-                    <td><input type="text"></td>
-                    <td><input type="text"></td>
-                </tbody>
-                <tbody>
-                    <td><input id="num" type="number"></td>
-                    <td><input type="text"></td>
-                    <td><input type="text"></td>
-                    <td><input type="text"></td>
-                    <td><input type="text"></td>
-                </tbody>
-                <tbody>
-                    <td><input id="num" type="number"></td>
-                    <td><input type="text"></td>
-                    <td><input type="text"></td>
-                    <td><input type="text"></td>
-                    <td><input type="text"></td>
-                </tbody>
-                <tbody>
-                    <td><input id="num" type="number"></td>
-                    <td><input type="text"></td>
-                    <td><input type="text"></td>
-                    <td><input type="text"></td>
-                    <td><input type="text"></td>
-                </tbody>
-                <tbody>
-                    <td><input id="num" type="number"></td>
-                    <td><input type="text"></td>
-                    <td><input type="text"></td>
-                    <td><input type="text"></td>
-                    <td><input type="text"></td>
-                </tbody>
-                <tbody>
-                    <td><input id="num" type="number"></td>
-                    <td><input type="text"></td>
-                    <td><input type="text"></td>
-                    <td><input type="text"></td>
-                    <td><input type="text"></td>
-                </tbody>
-                <tbody>
-                    <td><input id="num" type="number"></td>
-                    <td><input type="text"></td>
-                    <td><input type="text"></td>
-                    <td><input type="text"></td>
-                    <td><input type="text"></td>
-                </tbody>
-                <tbody>
-                    <td><input id="num" type="number"></td>
-                    <td><input type="text"></td>
-                    <td><input type="text"></td>
-                    <td><input type="text"></td>
-                    <td><input type="text"></td>
-                </tbody>
-                <tbody>
-                    <td><input id="num" type="number"></td>
-                    <td><input type="text"></td>
-                    <td><input type="text"></td>
-                    <td><input type="text"></td>
-                    <td><input type="text"></td>
-                </tbody>
-                <tbody>
-                    <td><input id="num" type="number"></td>
-                    <td><input type="text"></td>
-                    <td><input type="text"></td>
-                    <td><input type="text"></td>
-                    <td><input type="text"></td>
-                </tbody>
-                <tbody>
-                    <td><input id="num" type="number"></td>
-                    <td><input type="text"></td>
-                    <td><input type="text"></td>
-                    <td><input type="text"></td>
-                    <td><input type="text"></td>
-                </tbody>
-                <tbody>
-                    <td><input id="num" type="number"></td>
-                    <td><input type="text"></td>
-                    <td><input type="text"></td>
-                    <td><input type="text"></td>
-                    <td><input type="text"></td>
-                </tbody>
-                <tbody>
-                    <td><input id="num" type="number"></td>
-                    <td><input type="text"></td>
-                    <td><input type="text"></td>
-                    <td><input type="text"></td>
-                    <td><input type="text"></td>
-                </tbody>
-
-               </table>
+               <form action="">
+                <input type="number" placeholder="enter id">
+                <input type="text" placeholder="enter name">
+                <input type="number" placeholder="enter id">
+                <input type="number" placeholder="enter id">
+                <input type="number" placeholder="enter id">
+                <input type="number" placeholder="enter id">
+               </form>
 
             </div>
             <div id="bottom">
