--- a/HtmlFiles/insert.html
+++ b/HtmlFiles/insert.html
@@ -15,10 +15,10 @@
     <div id="main">
         <div id="left">
             <p>ADMIN <br>SURAJ KUMAR</p>
-            <a href="./dash.html"><i class="fa-solid fa-list"></i> Dashboard</a>
+            <a href="../index.html"><i class="fa-solid fa-list"></i> Dashboard</a>
             <a href="./insert.html" id="insert"><i class="fa-solid fa-table-list"></i> Insert</a>
             <a href="./table.html"><i class="fa-solid fa-chart-line"></i> Table</a>
-            <a href="../index.html"><i class="fa-solid fa-credit-card"></i> Card</a>
+            <a href="../HtmlFiles/card.html"><i class="fa-solid fa-credit-card"></i> Card</a>
             <a href="./team.html"><i class="fa-solid fa-users"></i> Team</a>
             <div id="premium">
 
@@ -46,12 +46,11 @@
             </div>
             <div id="main-content">
                <form action="">
-                <input type="number" placeholder="enter id">
-                <input type="text" placeholder="enter name">
-                <input type="number" placeholder="enter id">
-                <input type="number" placeholder="enter id">
-                <input type="number" placeholder="enter id">
-                <input type="number" placeholder="enter id">
+                <input type="number" placeholder="ID">
+                <input type="text" placeholder="NAME">
+                <input type="text" placeholder="ADDRESS">
+                <input type="text" placeholder="COURSE">
+                <input type="text" placeholder="GRADE">
                </form>
 
             </div>
