--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
                         <h5>Grade</h5>
                         <h5>Unknown</h5>
                     </div>
-                    <a href="./insert.html"><button type="button">Insert</button></a>
+                    <a href="./HtmlFiles/insert.html"><button type="button">Insert</button></a>
                 </div>
                 <div id="box">
                     <h4>Fetch Data in Table</h4>
@@ -119,7 +119,7 @@
                         <h5>Grade</h5>
                         <h5>A+</h5>
                     </div>
-                    <a href="./table.html"><button type="button">Fetch</button></a>
+                    <a href="./HtmlFiles/table.html"><button type="button">Fetch</button></a>
                 </div>
                 <div id="box">
                     <h4>Team Work</h4>
@@ -147,7 +147,7 @@
                         <h5>Tester</h5>
                         <h5>SUSHIL LOVANSHI</h5>
                     </div>
-                    <a href="../HtmlFiles/team.html"><button type="button">Team</button></a>
+                    <a href="./HtmlFiles/team.html"><button type="button">Team</button></a>
                 </div>
             </div>
         </div>
