--- a/HtmlFiles/insert.html
+++ b/HtmlFiles/insert.html
@@ -55,7 +55,7 @@
 
             </div>
             <div id="bottom">
-                <button type="button" onclick="clear();"><a href="./insert.html">Clear</a></button>
+                <a href="./insert.html"><button type="button">Clear</button></a>
                 <button type="button" onclick="submit();">Submit</button>
                 <button type="button" onclick="prt();">Print</button>
                 <button type="button" onclick="next();">Next</button>
