--- a/HtmlFiles/card.html
+++ b/HtmlFiles/card.html
@@ -18,7 +18,7 @@
       <a href="../index.html"><i class="fa-solid fa-list"></i> Dashboard</a>
       <a href="./insert.html"><i class="fa-solid fa-table-list"></i> Insert</a>
       <a href="./table.html"><i class="fa-solid fa-chart-line"></i> Table</a>
-      <a href="./dash.html" id="card"><i class="fa-solid fa-credit-card"></i> Card</a>
+      <a href="./card.html" id="card"><i class="fa-solid fa-credit-card"></i> Card</a>
       <a href="./team.html"><i class="fa-solid fa-users"></i> Team</a>
       <div id="premium">
         <div id="box">
