--- a/HtmlFiles/insert.html
+++ b/HtmlFiles/insert.html
@@ -46,11 +46,11 @@
             </div>
             <div id="main-content">
                <form action="">
-                <input type="number" placeholder="ID">
-                <input type="text" placeholder="NAME">
-                <input type="text" placeholder="ADDRESS">
-                <input type="text" placeholder="COURSE">
-                <input type="text" placeholder="GRADE">
+                <input type="number" placeholder="ID" id="id">
+                <input type="text" placeholder="NAME" id="name">
+                <input type="text" placeholder="ADDRESS" id="address">
+                <input type="text" placeholder="COURSE" id="course">
+                <input type="text" placeholder="GRADE" id="grade">
                </form>
 
             </div>
