--- a/HtmlFiles/card.html
+++ b/HtmlFiles/card.html
@@ -43,7 +43,8 @@
           <li id="mode" onclick="mode();"><a href="#"><i class="fa-solid fa-circle-half-stroke"></i></a></li>
         </ul>
         <ul id="third">
-          <li><input type="text" placeholder=" search..."><button type="button"><i class="fa-solid fa-magnifying-glass"></i></button></li>
+          <li><input type="text" placeholder=" search..."><button type="button"><i
+                class="fa-solid fa-magnifying-glass"></i></button></li>
         </ul>
       </div>
       <div id="main-content">
@@ -80,13 +81,25 @@
           <div id="box2">
             <p id="date"></p>
             <p id="date">Used Apps</p>
-           <h2>Today's Screen Time</h2>
-           <div id="insta"><i class="fa-brands fa-square-instagram"></i> <meter min="0" value="40" max="100"></meter> <p>40%  </p> </div>
-           <div id="whats"><i class="fa-brands fa-square-whatsapp"></i><meter min="0" value="10" max="100"></meter> <p>10%  </p></div>
-           <div id="face"><i class="fa-brands fa-facebook"></i><meter min="0" value="15" max="100"></meter> <p>15%  </p></div>
-           <div id="yout"><i class="fa-brands fa-youtube"></i><meter min="0" value="14" max="100"></meter> <p>14%  </p></div>
-           <div id="google"><i class="fa-brands fa-google-plus"></i><meter min="0" value="15" max="100"></meter> <p>15%  </p></div>
-           <div id="google"><i class="fa-solid fa-sliders"></i><meter min="0" value="6" max="100"></meter> <p>6% </p></div>
+            <h2>Today's Screen Time</h2>
+            <div id="insta"><i class="fa-brands fa-square-instagram"></i> <meter min="0" value="40" max="100"></meter>
+              <p>40% </p>
+            </div>
+            <div id="whats"><i class="fa-brands fa-square-whatsapp"></i><meter min="0" value="10" max="100"></meter>
+              <p>10% </p>
+            </div>
+            <div id="face"><i class="fa-brands fa-facebook"></i><meter min="0" value="15" max="100"></meter>
+              <p>15% </p>
+            </div>
+            <div id="yout"><i class="fa-brands fa-youtube"></i><meter min="0" value="14" max="100"></meter>
+              <p>14% </p>
+            </div>
+            <div id="google"><i class="fa-brands fa-google-plus"></i><meter min="0" value="15" max="100"></meter>
+              <p>15% </p>
+            </div>
+            <div id="google"><i class="fa-solid fa-sliders"></i><meter min="0" value="6" max="100"></meter>
+              <p>6% </p>
+            </div>
           </div>
         </div>
         <div id="main-box2">
@@ -127,8 +140,12 @@
             </div>
           </div>
           <div id="box" id="box3">
-             <h3><a href="https://maps.app.goo.gl/qqHy82outPa3fn9Q8" target="_blank">Locate Me on Map <i class="fa-solid fa-up-right-from-square"></i></a> </h3>
-             <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d13375517.340303045!2d79.10800190428546!3d23.26462627220384!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sen!2sin!4v1713947999729!5m2!1sen!2sin" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+            <h3><a href="https://maps.app.goo.gl/qqHy82outPa3fn9Q8" target="_blank">Locate Me on Map <i
+                  class="fa-solid fa-up-right-from-square"></i></a> </h3>
+            <iframe
+              src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d13375517.340303045!2d79.10800190428546!3d23.26462627220384!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sen!2sin!4v1713947999729!5m2!1sen!2sin"
+              width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"
+              referrerpolicy="no-referrer-when-downgrade"></iframe>
           </div>
         </div>
       </div>
