--- a/index.html
+++ b/index.html
@@ -63,8 +63,9 @@
                     <h5>Process</h5>
                     <h5>Explorer (1.35%)</h5>
                     <h5>Home (3.54%)</h5>
-                    <div><h5>TextInputHost (0.00%)</h5> 
-                    <a href="#" id="refresh"><i class="fa-solid fa-rotate-right"></i></a>
+                    <div>
+                        <h5>TextInputHost (0.00%)</h5>
+                        <a href="#" id="refresh"><i class="fa-solid fa-rotate-right"></i></a>
                     </div>
                 </div>
                 <div id="box">
@@ -123,9 +124,8 @@
                 </div>
                 <div id="box">
                     <h4>Team Work</h4>
-                    <img src="https://i.pinimg.com/originals/ea/db/74/eadb74787dda41cc6333341e55293432.gif"
-                        alt="">
-                        
+                    <img src="https://i.pinimg.com/originals/ea/db/74/eadb74787dda41cc6333341e55293432.gif" alt="">
+
                     <div>
                         <h5>Team Leader</h5>
                         <hr width="150px" color="#24315E">
