--- a/HtmlFiles/card.html
+++ b/HtmlFiles/card.html
@@ -39,7 +39,7 @@
         </ul>
         <ul id="second">
           <li><a href="#"><i class="fa-solid fa-bell"></i></a></li>
-          <li id="user"><a href="./Form/form.html" target="_blank"><i class="fa-solid fa-user"></i></a></li>
+          <li id="user"><a href="../Form/form.html" target="_blank"><i class="fa-solid fa-user"></i></a></li>
           <li id="mode" onclick="mode();"><a href="#"><i class="fa-solid fa-circle-half-stroke"></i></a></li>
         </ul>
         <ul id="third">
