--- a/index.html
+++ b/index.html
@@ -49,11 +49,11 @@
                     <div>
                         <h4>CPU <i class="fa-solid fa-microchip"></i> PROCESSING ...</h4>
                     </div>
-                    <img src="https://media.licdn.com/dms/image/D5612AQGcWElfObfH3Q/article-cover_image-shrink_600_2000/0/1702393073554?e=2147483647&v=beta&t=dHHZxwGaN2_wU_XeRy_A09wJtpPx5PM0rC5xsIp4fl8"
+                    <img src="https://cdn1.iconfinder.com/data/icons/technology-and-hardware-2/200/vector_66_06-512.png"
                         alt="">
                     <div>
                         <h5>CPU Utilization</h5>
-                        <hr width="170px" color="#24315E">
+                        <hr width="190px" color="#24315E">
                         <h5>Speed</h5>
                     </div>
                     <div>
@@ -74,7 +74,7 @@
                         alt="">
                     <div>
                         <h5>S.Id</h5>
-                        <hr width="200px" color="#24315E">
+                        <hr width="250px" color="#24315E">
                         <h5>Unknown</h5>
                     </div>
                     <div>
@@ -97,7 +97,7 @@
                 </div>
                 <div id="box">
                     <h4>Fetch Data in Table</h4>
-                    <img src="https://www.shriramgi.com/bundle/assets/images/product/pa-renewal/gif/Data-Fetch.gif"
+                    <img src="https://www.investmentz.com/images/loader_new.gif"
                         alt="">
                     <div>
                         <h5>S.Id</h5>
@@ -124,11 +124,11 @@
                 </div>
                 <div id="box">
                     <h4>Team Work</h4>
-                    <img src="https://i.pinimg.com/originals/ea/db/74/eadb74787dda41cc6333341e55293432.gif" alt="">
+                    <img src="https://gdsc.dbit.in/img/logo/teamwork.gif" alt="">
 
                     <div>
                         <h5>Team Leader</h5>
-                        <hr width="150px" color="#24315E">
+                        <hr width="190px" color="#24315E">
                         <h5>MD QUASIM</h5>
                     </div>
                     <div>
