--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
                     <div>
                         <h5>Team Leader</h5>
                         <hr width="190px" color="#24315E">
-                        <h5>MD QUASIM</h5>
+                        <h5>MR. QUASIM SIR</h5>
                     </div>
                     <div>
                         <h5>Team Management</h5>
