--- a/HtmlFiles/card.html
+++ b/HtmlFiles/card.html
@@ -74,7 +74,7 @@
                 <button type="button" onclick="learMore();">Learn More</button>
               </div>
               <div id="box2">
-                <img src="https://static.qantasloyalty.com/store-static-assets/desktop/1005254_1.jpg" alt="">
+                <img src="../debitcard.png" alt="">
               </div>
             </div>
           </div>
