--- a/index.html
+++ b/index.html
@@ -45,30 +45,8 @@
                 </ul>
             </div>
             <div id="main-content">
-                <div id="box">
-                    <div>
-                        <h4>CPU <i class="fa-solid fa-microchip"></i> PROCESSING ...</h4>
-                    </div>
-                    <img src="https://cdn1.iconfinder.com/data/icons/technology-and-hardware-2/200/vector_66_06-512.png"
-                        alt="">
-                    <div>
-                        <h5>CPU Utilization</h5>
-                        <hr width="190px" color="#24315E">
-                        <h5>Speed</h5>
-                    </div>
-                    <div>
-                        <h3 id="perc"></h3>
-                        <h3 id="ghz">241GHz</h3>
-                    </div>
-                    <h5>Process</h5>
-                    <h5>Explorer (1.35%)</h5>
-                    <h5>Home (3.54%)</h5>
-                    <div>
-                        <h5>TextInputHost (0.00%)</h5>
-                        <a href="#" id="refresh"><i class="fa-solid fa-rotate-right"></i></a>
-                    </div>
-                </div>
-                <div id="box">
+
+                <!-- <div id="box">
                     <h4>Insert Data in Table</h4>
                     <img src="https://static.wixstatic.com/media/17ac83_810739dfef3941449effd1751ba1c080~mv2.gif"
                         alt="">
@@ -94,14 +72,14 @@
                         <h5>Unknown</h5>
                     </div>
                     <a href="./HtmlFiles/insert.html"><button type="button">Insert</button></a>
-                </div>
+                </div> -->
                 <div id="box">
-                    <h4>Fetch Data in Table</h4>
+                    <h4>Fetch Data From Table</h4>
                     <img src="https://www.investmentz.com/images/loader_new.gif"
                         alt="">
                     <div>
                         <h5>S.Id</h5>
-                        <hr width="200px" color="#24315E">
+                        <hr width="400px" color="white">
                         <h5>Cybrom-1032</h5>
                     </div>
                     <div>
@@ -120,7 +98,7 @@
                         <h5>Grade</h5>
                         <h5>A+</h5>
                     </div>
-                    <a href="./HtmlFiles/table.html"><button type="button">Fetch</button></a>
+                    <a href="./HtmlFiles/table.html"><button type="button">Fetch Data</button></a>
                 </div>
                 <div id="box">
                     <h4>Team Work</h4>
@@ -128,7 +106,7 @@
 
                     <div>
                         <h5>Team Leader</h5>
-                        <hr width="190px" color="#24315E">
+                        <hr width="320px" color="white">
                         <h5>MR. QUASIM SIR</h5>
                     </div>
                     <div>
@@ -147,8 +125,45 @@
                         <h5>Tester</h5>
                         <h5>SUSHIL LOVANSHI</h5>
                     </div>
-                    <a href="./HtmlFiles/team.html"><button type="button">Team</button></a>
+                    <a href="./HtmlFiles/team.html"><button type="button">See Teams</button></a>
                 </div>
+                <aside float="right">
+                <img src="suraj.jpg" alt="">
+                <p>Welcome Back!!</p>
+                <h2>SURAJ KUMAR</h2>
+                <div>
+                    <i class="fa-solid fa-arrow-trend-down" id="arrow1"></i>
+                    <p>income <br>$2468.395</p>
+                    <p><i class="fa-solid fa-ellipsis"></i></p>
+                </div>
+
+                <div>
+                    <i class="fa-solid fa-arrow-trend-up" id="arrow2"></i>
+                    <p>Expenses <br>$26848.354</p>
+                    <p><i class="fa-solid fa-ellipsis"></i></p>
+                </div>
+                <div id="flow">
+                    <h2>Money Flow</h2>
+                    <div id="chart">
+                        <div id="div1"></div>
+                        <div id="div2"></div>
+                        <div id="div3"></div>
+                        <div id="div4"></div>
+                        <div id="div5"></div>
+                        <div id="div6"></div>
+                        <div id="div7"></div>
+                        <div id="div8"></div>
+                    </div>
+                    <div id="describe1">
+                        <p>Income</p>
+                        <p><i class="fa-solid fa-circle"></i></p>
+                    </div>
+                    <div id="describe2">
+                        <p>Expenses</p>
+                        <p><i class="fa-solid fa-circle"></i></p>
+                    </div>
+                </div>
+                </aside>
             </div>
         </div>
         <script src="../script.js"></script>
