--- a/HtmlFiles/team.html
+++ b/HtmlFiles/team.html
@@ -51,24 +51,24 @@
                 <h4>Team Work</h4>
                     <img src="https://gdsc.dbit.in/img/logo/teamwork.gif" alt="">
                 <div>
-                    <h5>Team Leader</h5>
+                    <h5>TEAM LEADER</h5>
                     <hr width="550px" color="#24315E">
                     <h5>MR. QUASIM SIR</h5>
                 </div>
                 <div>
-                    <h5>Team Management</h5>
+                    <h5>TEAM MANAGEMENT</h5>
                     <h5>SURAJ KUMAR</h5>
                 </div>
                 <div>
-                    <h5>Frontend Developer</h5>
+                    <h5>FRONTEND DEVELOPER</h5>
                     <h5>RAJAN KUMAR</h5>
                 </div>
                 <div>
-                    <h5>Backend Developer</h5>
+                    <h5>BACKEND DEVELOPER</h5>
                     <h5>DEVANSH GARG</h5>
                 </div>
                 <div>
-                    <h5>Tester</h5>
+                    <h5>TESTER</h5>
                     <h5>SUSHIL LOVANSHI</h5>
                 </div>
                 <a href="#"><button type="button">Team</button></a>
