--- a/HtmlFiles/card.html
+++ b/HtmlFiles/card.html
@@ -151,7 +151,7 @@
       </div>
     </div>
   </div>
-  <script src="script.js"></script>
+  <script src="../script.js"></script>
 </body>
 
 </html>
