--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
                     </div>
                     <a href="./HtmlFiles/insert.html"><button type="button">Insert</button></a>
                 </div> -->
-                <div id="box">
+                <!-- <div id="box">
                     <h4>Fetch Data From Table</h4>
                     <img src="https://www.investmentz.com/images/loader_new.gif"
                         alt="">
@@ -126,7 +126,7 @@
                         <h5>SUSHIL LOVANSHI</h5>
                     </div>
                     <a href="./HtmlFiles/team.html"><button type="button">See Teams</button></a>
-                </div>
+                </div> -->
                 <aside float="right">
                 <img src="suraj.jpg" alt="">
                 <p>Welcome Back!!</p>
