--- a/HtmlFiles/card.html
+++ b/HtmlFiles/card.html
@@ -47,7 +47,7 @@
                 class="fa-solid fa-magnifying-glass"></i></button></li>
         </ul>
       </div>
-      <div id="main-content">
+      <!-- <div id="main-content">
         <div id="main-box1">
           <div id="box1">
             <div id="div1">
@@ -147,9 +147,9 @@
               width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"
               referrerpolicy="no-referrer-when-downgrade"></iframe>
           </div>
-        </div>
-      </div>
+        </div> -->
     </div>
+  </div>
   </div>
   <script src="../script.js"></script>
 </body>
