--- a/HtmlFiles/card.html
+++ b/HtmlFiles/card.html
@@ -21,10 +21,10 @@
       <a href="./card.html" id="card"><i class="fa-solid fa-credit-card"></i> Card</a>
       <a href="./team.html"><i class="fa-solid fa-users"></i> Team</a>
       <div id="premium">
-        <div id="box">
+        <!-- <div id="box">
           <p>Get a Premium Account</p>
           <button type="button" id="btn">Get Now</button>
-        </div>
+        </div> -->
       </div>
     </div>
     <div id="hero">
