--- a/HtmlFiles/insert.html
+++ b/HtmlFiles/insert.html
@@ -45,6 +45,7 @@
                 </ul>
             </div>
             <div id="main-content">
+                <center><h3>INSERT DATA</h3></center>
                 <form action="">
                     <input type="number" placeholder="ID" id="id">
                     <input type="text" placeholder="NAME" id="name">
