--- a/HtmlFiles/card.html
+++ b/HtmlFiles/card.html
@@ -47,8 +47,9 @@
                 class="fa-solid fa-magnifying-glass"></i></button></li>
         </ul>
       </div>
-      <!-- <div id="main-content">
-        <div id="main-box1">
+      <div id="main-content">
+        <h1>CARD'S</h1>
+        <!-- <div id="main-box1">
           <div id="box1">
             <div id="div1">
               <div id="box">
