--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
                     <a href="./HtmlFiles/team.html"><button type="button">See Teams</button></a>
                 </div> -->
                 
-                <aside float="right">
+                <!-- <aside float="right">
                 <img src="suraj.jpg" alt="">
                 <p>Welcome Back!!</p>
                 <h2>SURAJ KUMAR</h2>
@@ -164,7 +164,8 @@
                         <p><i class="fa-solid fa-circle"></i></p>
                     </div>
                 </div>
-                </aside>
+                </aside> -->
+                <h1>DASHBOARD</h1>
             </div>
         </div>
         <script src="../script.js"></script>
