--- a/HtmlFiles/table.html
+++ b/HtmlFiles/table.html
@@ -52,8 +52,10 @@
                         <th>Address</th>
                         <th>Course</th>
                         <th>Grade</th>
+                        <th>Delete</th>
                     </thead>
                     <tbody id="display_data">
+                        <td></td>
                         <td></td>
                         <td></td>
                         <td></td>
