--- a/HtmlFiles/insert.html
+++ b/HtmlFiles/insert.html
@@ -58,9 +58,9 @@
             </div>
             <div id="bottom">
                 <a href="./insert.html"><button type="button">Clear</button></a>
-                <button type="button" onclick="submit();">Submit</button>
+                <button type="button">Submit</button>
                 <button type="button" onclick="prt();">Print</button>
-                <button type="button" onclick="next();">Next</button>
+                <a href="./table.html"><button type="button">Show</button></a>
             </div>
         </div>
     </div>
