--- a/HtmlFiles/table.html
+++ b/HtmlFiles/table.html
@@ -53,8 +53,10 @@
                         <th>Course</th>
                         <th>Grade</th>
                         <th>Delete</th>
+                        <th>Modify</th>
                     </thead>
                     <tbody id="display_data">
+                        <td></td>
                         <td></td>
                         <td></td>
                         <td></td>
