--- a/HtmlFiles/team.html
+++ b/HtmlFiles/team.html
@@ -52,7 +52,7 @@
                     <img src="https://gdsc.dbit.in/img/logo/teamwork.gif" alt="">
                 <div>
                     <h5>TEAM LEADER</h5>
-                    <hr width="550px" color="#24315E">
+                    <hr width="700px" color="white">
                     <h5>MR. QUASIM SIR</h5>
                 </div>
                 <div>
