--- a/index.html
+++ b/index.html
@@ -165,7 +165,9 @@
                     </div>
                 </div>
                 </aside> -->
-                <h1>DASHBOARD</h1>
+                <div id="box">
+                    <h1>DASHBOARD</h1>
+                </div>
             </div>
         </div>
         <script src="../script.js"></script>
