--- a/HtmlFiles/table.html
+++ b/HtmlFiles/table.html
@@ -66,6 +66,17 @@
                     </tbody>
                 </table>
 
+                <!-- Edit Form -->
+                <form action="" id="myfrm">
+                    <center><h2>EDIT DATA</h2></center>
+                    <input type="number" placeholder="ID" id="id">
+                    <input type="text" placeholder="NAME" id="name">
+                    <input type="text" placeholder="ADDRESS" id="address">
+                    <input type="text" placeholder="COURSE" id="course">
+                    <input type="text" placeholder="GRADE" id="grade">
+                    <input type="submit" onclick="editdata();" id="submit">
+                </form>
+
             </div>
             <div id="bottom">
                 <button type="button" onclick="clear();">Prev</button>
