--- a/HtmlFiles/insert.html
+++ b/HtmlFiles/insert.html
@@ -52,7 +52,7 @@
                     <input type="text" placeholder="ADDRESS" id="address">
                     <input type="text" placeholder="COURSE" id="course">
                     <input type="text" placeholder="GRADE" id="grade">
-                    <input type="submit" onclick="add();">
+                    <input type="submit" onclick="add();" id="submit">
                 </form>
 
             </div>
